@@ -54,35 +54,37 @@ public class Matchers {
   }
 
   public static Matcher<Iterable<? super V1Container>> hasAuxiliaryImageInitContainer(
-          String name, String image, String imagePullPolicy) {
+          String name, String image, V1Container.ImagePullPolicyEnum imagePullPolicy) {
     return hasAuxiliaryImageInitContainer(name, image, imagePullPolicy, AUXILIARY_IMAGE_DEFAULT_SOURCE_WDT_INSTALL_HOME,
             AUXILIARY_IMAGE_DEFAULT_SOURCE_MODEL_HOME);
   }
 
   public static Matcher<Iterable<? super V1Container>> hasAuxiliaryImageInitContainer(
-          String name, String image, String imagePullPolicy, String sourceWDTInstallHome) {
+      String name, String image, V1Container.ImagePullPolicyEnum imagePullPolicy, String sourceWDTInstallHome) {
     return hasAuxiliaryImageInitContainer(name, image, imagePullPolicy, sourceWDTInstallHome,
             AUXILIARY_IMAGE_DEFAULT_SOURCE_MODEL_HOME);
   }
 
   public static Matcher<Iterable<? super V1Container>> hasAuxiliaryImageInitContainer(
-          String name, String image, String imagePullPolicy, String sourceWDTInstallHome, String sourceModelHome) {
+      String name, String image, V1Container.ImagePullPolicyEnum imagePullPolicy,
+      String sourceWDTInstallHome, String sourceModelHome) {
     return hasItem(createAuxiliaryImageInitContainer(name, image, imagePullPolicy, sourceWDTInstallHome,
             sourceModelHome));
   }
 
   public static Matcher<Iterable<? super V1Container>> hasLegacyAuxiliaryImageInitContainer(
-          String name, String image, String imagePullPolicy, String command) {
+      String name, String image, V1Container.ImagePullPolicyEnum imagePullPolicy, String command) {
     return hasLegacyAuxiliaryImageInitContainer(name, image, imagePullPolicy, command, null, TEST_VOLUME_NAME);
   }
 
   public static Matcher<Iterable<? super V1Container>> hasLegacyAuxiliaryImageInitContainer(
-          String name, String image, String imagePullPolicy, String command, String serverName) {
+      String name, String image, V1Container.ImagePullPolicyEnum imagePullPolicy, String command, String serverName) {
     return hasLegacyAuxiliaryImageInitContainer(name, image, imagePullPolicy, command, serverName, TEST_VOLUME_NAME);
   }
 
   public static Matcher<Iterable<? super V1Container>> hasLegacyAuxiliaryImageInitContainer(
-          String name, String image, String imagePullPolicy, String command, String serverName, String volume) {
+      String name, String image, V1Container.ImagePullPolicyEnum imagePullPolicy,
+      String command, String serverName, String volume) {
     return hasItem(createLegacyAuxiliaryImageInitContainer(name, image, imagePullPolicy, command, volume, serverName));
   }
 
@@ -139,7 +141,8 @@ public class Matchers {
     return new V1Container().name(name).image(image).command(Arrays.asList(command));
   }
 
-  private static V1Container createAuxiliaryImageInitContainer(String name, String image, String imagePullPolicy,
+  private static V1Container createAuxiliaryImageInitContainer(String name, String image,
+                                                               V1Container.ImagePullPolicyEnum imagePullPolicy,
                                                                String sourceWDTInstallHome, String sourceModelHome) {
     return new V1Container().name(name).image(image).imagePullPolicy(imagePullPolicy)
         .command(Collections.singletonList(AUXILIARY_IMAGE_INIT_CONTAINER_WRAPPER_SCRIPT)).args(null)
@@ -150,13 +153,14 @@ public class Matchers {
         .env(PodHelperTestBase.getAuxiliaryImageEnvVariables(image, sourceWDTInstallHome, sourceModelHome, name));
   }
 
-  private static V1Container createLegacyAuxiliaryImageInitContainer(String name, String image, String imagePullPolicy,
+  private static V1Container createLegacyAuxiliaryImageInitContainer(String name, String image,
+                                                                     V1Container.ImagePullPolicyEnum imagePullPolicy,
                                                                      String command, String volumeName,
                                                                      String serverName) {
     List<V1EnvVar> env = PodHelperTestBase.getLegacyAuxiliaryImageEnvVariables(image, name, command);
     //Optional.ofNullable(serverName).ifPresent(s -> env.addAll(PodHelperTestBase.getPredefinedEnvVariables(s)));
     return new V1Container().name(COMPATIBILITY_MODE + name).image(image).imagePullPolicy(imagePullPolicy)
-            .command(Arrays.asList(AUXILIARY_IMAGE_INIT_CONTAINER_WRAPPER_SCRIPT))
+            .command(List.of(AUXILIARY_IMAGE_INIT_CONTAINER_WRAPPER_SCRIPT))
             .args(null)
             .volumeMounts(Arrays.asList(
                     new V1VolumeMount().name(COMPATIBILITY_MODE + AUXILIARY_IMAGE_VOLUME_NAME_PREFIX + volumeName)
